2008-01-05  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/fp-32.h: Fix sub(a,0,a).
	* lightning/tests/3to2.c: Add new testcases.
	* lightning/tests/3to2.ok: Add new testcases.

2008-01-02  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/fp-32.h: Fix sub(a,b,a) with a ~= JIT_FPR0.
	* lightning/tests/3to2.c: New.
	* lightning/tests/3to2.ok: New.

2007-11-07  Paolo Bonzini  <bonzini@gnu.org>

	* opcode/Makefile.am: Fix AM_CPPFLAGS.

2007-08-12  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/core-i386.h: Improve encoding of set* instructions.
	* lightning/i386/core-64.h: Fix jit_bra_l.
	* tests/sete.c: New.
	* tests/sete.ok: New.

2007-06-29  Paolo Bonzini  <bonzini@gnu.org>

	* tests/bp.c: Upgrade to GPL/LGPLv3.
	* lightning/i386/asm-32.h: Upgrade to GPL/LGPLv3.
	* lightning/i386/asm-64.h: Upgrade to GPL/LGPLv3.
	* lightning/i386/core-32.h: Upgrade to GPL/LGPLv3.
	* lightning/i386/core-64.h: Upgrade to GPL/LGPLv3.
	* lightning/i386/fp-64.h: Upgrade to GPL/LGPLv3.
	* lightning/sparc/asm.h: Upgrade to GPL/LGPLv3.
	* lightning/sparc/core.h: Upgrade to GPL/LGPLv3.
	* lightning/sparc/fp.h: Upgrade to GPL/LGPLv3.
	* lightning/sparc/funcs.h: Upgrade to GPL/LGPLv3.
	* lightning/i386/asm-i386.h: Upgrade to GPL/LGPLv3.
	* lightning/i386/core-i386.h: Upgrade to GPL/LGPLv3.
	* lightning/i386/fp-32.h: Upgrade to GPL/LGPLv3.
	* lightning/i386/funcs.h: Upgrade to GPL/LGPLv3.
	* lightning/ppc/asm.h: Upgrade to GPL/LGPLv3.
	* lightning/ppc/core.h: Upgrade to GPL/LGPLv3.
	* lightning/ppc/fp.h: Upgrade to GPL/LGPLv3.
	* lightning/ppc/funcs.h: Upgrade to GPL/LGPLv3.
	* lightning.h: Upgrade to GPL/LGPLv3.
	* tests/add.c: Upgrade to GPL/LGPLv3.
	* tests/fib.c: Upgrade to GPL/LGPLv3.
	* tests/testfp.c: Upgrade to GPL/LGPLv3.
	* tests/fibdelay.c: Upgrade to GPL/LGPLv3.
	* tests/fibit.c: Upgrade to GPL/LGPLv3.
	* tests/funcfp.c: Upgrade to GPL/LGPLv3.
	* tests/incr.c: Upgrade to GPL/LGPLv3.
	* tests/printf.c: Upgrade to GPL/LGPLv3.
	* tests/printf2.c: Upgrade to GPL/LGPLv3.